Replace fixed margin with variable for desktop

--- a/style/scss/sections/_address.scss
+++ b/style/scss/sections/_address.scss
@@ -100,7 +100,7 @@
 				text-decoration: none;
 				@include headline;
 				display: block;
-				margin-top: 24px;
+				margin-top: $spacing-lg-desktop;
 			}
 
 			&__opening-hours {
