--- a/style/css/style.css
+++ b/style/css/style.css
@@ -1564,7 +1564,7 @@ h6 {
   background-color: #EEF0F3;
 }
 .address__points {
-  width: 27%;
+  min-width: 27%;
   background-color: #0c1625;
   height: 100%;
   overflow-y: auto;
@@ -1623,7 +1623,7 @@ h6 {
   line-height: 100%;
   letter-spacing: -0.04em;
   display: block;
-  margin-top: 5px;
+  margin-top: 24px;
 }
 .address__point .point__opening-hours {
   color: #fff;
