--- a/style/css/style.css
+++ b/style/css/style.css
@@ -555,7 +555,7 @@ h6 {
   overflow: hidden;
 }
 .hero__text-container {
-  max-width: 800px;
+  max-width: 59%;
   z-index: 2;
   display: flex;
   flex-direction: column;
@@ -806,6 +806,7 @@ h6 {
 }
 .payments__header-category {
   display: flex;
+  flex-wrap: wrap;
   gap: 12px;
 }
 .payments__category-button {
@@ -902,6 +903,7 @@ h6 {
 }
 .payments__category-section.active .payments__category-content {
   display: flex;
+  flex-wrap: wrap;
 }
 .payments__category-section:not(.active) .payments__category-content {
   display: none;
@@ -920,6 +922,7 @@ h6 {
   padding: 0;
 }
 .payments__category-content li {
+  min-width: 256px;
   width: calc((100% - 80px) / 5);
   min-height: 298px;
   background-color: #f6f6f7;
@@ -1564,7 +1567,7 @@ h6 {
   background-color: #EEF0F3;
 }
 .address__points {
-  min-width: 27%;
+  width: 27%;
   background-color: #0c1625;
   height: 100%;
   overflow-y: auto;
@@ -1709,27 +1712,16 @@ h6 {
   background-color: rgb(229.5, 229.5, 229.5);
 }
 
-/* ========================================= Mobile (360px) ========================================= */
-@media (max-width: 360px) {
-  #stages,
-  #payments,
-  #vacancies,
-  #requirements,
-  #training,
-  #faq {
-    scroll-margin-top: 62px;
-  }
-  #address {
-    scroll-margin-top: 1px;
-  }
-  .header {
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-  }
+/* ========================================= Tablet (1024px) ========================================= */
+@media (max-width: 1024px) {
   .header__content {
     padding: 16px;
   }
   .header__nav {
     display: none;
+  }
+  .header--sticky .header__item:first-child {
+    display: flex;
   }
   .header__contact {
     display: none;
@@ -1742,18 +1734,6 @@ h6 {
     border: none;
     cursor: pointer;
     padding: 0;
-  }
-  .header--sticky {
-    width: 100%;
-    margin: 0;
-    border-radius: 0;
-    background-color: #0c1625;
-  }
-  .header--sticky .header__content {
-    padding: 16px;
-  }
-  .header--sticky .header__item:first-child {
-    display: flex;
   }
   .header__mobile-menu {
     display: block;
@@ -1858,14 +1838,11 @@ h6 {
     height: 24px;
   }
   .hero {
-    background-image: url("../../image/hero/hero-background-mobile.png");
-    height: 959px;
-    padding: 54px 16px 0;
+    padding: 80px 40px 40px 40px;
   }
   .hero__text-container {
-    max-width: 100%;
+    max-width: 75%;
     gap: 24px;
-    margin-top: 290px;
   }
   .hero__text-item:nth-child(1) {
     gap: 16px;
@@ -1874,26 +1851,91 @@ h6 {
     flex-direction: column;
     gap: 16px;
   }
+  .hero__subtitle {
+    max-width: 60%;
+  }
+  .hero__item-block {
+    gap: 6px;
+    width: 100%;
+  }
+  .hero__text-garant h3 {
+    font-size: 16px;
+  }
+  .hero__text-garant p {
+    font-size: 12px;
+  }
+  .hero__text-cta {
+    width: 60%;
+  }
+  .sticker {
+    margin: 60px 40px;
+  }
+  .payments__content-header {
+    align-items: flex-start;
+  }
+  .payments__category-content li {
+    width: calc((100% - 40px) / 3);
+  }
+  .guarantees {
+    padding: 0 40px 40px;
+  }
+  .requirements__title {
+    margin: 40px;
+  }
+  .requirements__content {
+    padding: 0 40px 40px;
+  }
+  .faq {
+    padding: 40px 40px 20px;
+  }
+  .faq__contact {
+    flex-direction: column-reverse;
+  }
+}
+/* ========================================= Mobile (430px) ========================================= */
+@media (max-width: 430px) {
+  #stages,
+  #payments,
+  #vacancies,
+  #requirements,
+  #training,
+  #faq {
+    scroll-margin-top: 62px;
+  }
+  #address {
+    scroll-margin-top: 1px;
+  }
+  .header {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  }
+  .header--sticky {
+    width: 100%;
+    margin: 0;
+    border-radius: 0;
+    background-color: #0c1625;
+  }
+  .header--sticky .header__content {
+    padding: 16px;
+  }
+  .hero {
+    background-image: url("../../image/hero/hero-background-mobile.png");
+    height: 959px;
+    padding: 54px 16px 0;
+  }
+  .hero__text-container {
+    max-width: 100%;
+    margin-top: 290px;
+  }
   .hero__title {
     font-size: 32px;
   }
   .hero__subtitle {
     font-size: 14px;
   }
-  .hero__item-block {
-    gap: 6px;
-    width: 100%;
-  }
   .hero__item-block h3 {
     font-size: 16px;
   }
   .hero__item-block p {
-    font-size: 12px;
-  }
-  .hero__text-garant h3 {
-    font-size: 16px;
-  }
-  .hero__text-garant p {
     font-size: 12px;
   }
   .hero__text-cta {
@@ -2428,7 +2470,6 @@ h6 {
     margin-top: 50px;
   }
   .faq {
-    padding: 40px 16px 20px;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -2480,6 +2521,7 @@ h6 {
   }
   .faq__contact {
     gap: 32px;
+    flex-direction: row;
     align-items: flex-start;
   }
   .faq__contact-icons {
