--- a/style/scss/sections/_hero.scss
+++ b/style/scss/sections/_hero.scss
@@ -15,7 +15,7 @@
 	overflow: hidden;
 
 	&__text-container {
-		max-width: 800px;
+		max-width: 59%;
 		z-index: 2;
 		display: flex;
 		flex-direction: column;
