--- a/style/scss/_media.scss
+++ b/style/scss/_media.scss
@@ -216,6 +216,10 @@
 	// ===== PAYMENTS SECTION =====
 	.payments {
 
+		&__container {
+			padding: $spacing-none-desktop $spacing-xxxl-desktop 175px;
+		}
+
 		&__content-header {
 			align-items: flex-start;
 		}
@@ -237,7 +241,7 @@
 		}
 
 		&__content {
-			padding: 0 $spacing-xxxl-desktop $spacing-xxxl-desktop;
+			padding: 0 $spacing-xxxl-desktop calc($spacing-xxxl-desktop + 175px);
 			grid-template-columns: repeat(3, 1fr);
 			grid-template-rows: repeat(3, auto);
 		}
@@ -270,6 +274,13 @@
 		}
 	}
 
+	// ===== TRAINING SECTION =====
+	.training {
+		&__content {
+			padding-bottom: 675px;
+		}
+	}
+
 	// ===== FAQ SECTION =====
 	.faq {
 		padding: $spacing-xxxl-desktop $spacing-xxxl-desktop $spacing-xl-mobile;
@@ -277,6 +288,11 @@
 		&__contact {
 			flex-direction: column-reverse;
 		}
+	}
+
+	// ===== ADDRESS =====
+	.address {
+		padding-top: 174px;
 	}
 }
 
@@ -302,6 +318,10 @@
 
 	// ===== PAYMENTS SECTION =====
 	.payments {
+		&__container {
+			padding-bottom: 151px;
+		}
+
 		&__title {
 			font-size: $heading-2-mobile;
 		}
@@ -399,12 +419,20 @@
 		&__title {
 			font-size: $heading-2-mobile;
 		}
+
+		&__content {
+			padding-bottom: 216px;
+		}
 	}
 
 	// ===== TRAINING SECTION =====
 	.training {
 		&__title {
 			font-size: $heading-2-mobile;
+		}
+
+		&__content {
+			padding-bottom: 585px;
 		}
 
 		&__footer {
@@ -423,6 +451,8 @@
 
 	// ===== ADDRESS =====
 	.address {
+		padding-top: 151px;
+
 		&__title {
 			font-size: $heading-2-mobile;
 		}
@@ -542,6 +572,10 @@
 
 	// ===== PAYMENTS SECTION =====
 	.payments {
+		&__container {
+			padding-bottom: 123px;
+		}
+
 		&__city-toggle {
 			width: 150px;
 			padding: $spacing-xs-mobile $spacing-sm-mobile;
@@ -689,6 +723,11 @@
 		}
 	}
 
+	// =====REQUIREMENTS SECTION =====
+	.requirements__content {
+		padding-bottom: 173px;
+	}
+
 	// ===== TRAINING SECTION =====
 	.training {
 		background-color: $text-default;
@@ -735,6 +774,10 @@
 			.training__content-description {
 				flex: auto;
 			}
+		}
+
+		&__content {
+			padding-bottom: 500px;
 		}
 
 		&__content-heading {
@@ -932,6 +975,11 @@
 			}
 		}
 	}
+
+	// ===== ADDRESS =====
+	.address {
+		padding-top: 123px;
+	}
 }
 
 /* ========================================= Mobile (540px) ========================================= */
@@ -1078,7 +1126,7 @@
 		background-color: $background;
 
 		&__container {
-			padding: $spacing-none-mobile $spacing-md-mobile;
+			padding: $spacing-none-mobile $spacing-md-mobile 92px;
 			gap: $spacing-xl-mobile;
 		}
 
@@ -1283,7 +1331,7 @@
 		}
 
 		&__content {
-			padding: $spacing-none-desktop $spacing-md-mobile 54px;
+			padding: $spacing-none-desktop $spacing-md-mobile 146px;
 			display: flex;
 			flex-direction: column;
 			gap: calc($spacing-xxs-mobile * 2);
@@ -1361,7 +1409,7 @@
 		}
 
 		&__content {
-			padding: $spacing-none-mobile $spacing-md-mobile;
+			padding: $spacing-none-mobile $spacing-md-mobile 350px;
 		}
 	}
 
@@ -1372,6 +1420,8 @@
 
 	// ===== ADDRESS SECTION =====
 	.address {
+		padding-top: 92px;
+
 		&__content {
 			padding: $spacing-none-mobile $spacing-none-mobile;
 			gap: $spacing-xl-mobile;
@@ -1508,6 +1558,11 @@
 		height: 1145px;
 	}
 
+	// ===== PAYMENTS SECTION =====
+	.payments__container {
+		padding-bottom: 73px;
+	}
+
 	// ===== VACANCIES SECTION =====
 	.vacancies {
 		background-image: url('../../image/vacancies/background-mobile.webp');
@@ -1526,7 +1581,7 @@
 		}
 
 		&__content {
-			padding: $spacing-none-desktop $spacing-md-mobile 54px;
+			padding: $spacing-none-desktop $spacing-md-mobile 127px;
 			display: flex;
 			flex-direction: column;
 			gap: calc($spacing-xxs-mobile * 2);
@@ -1592,8 +1647,17 @@
 		}
 	}
 
+	// ===== TRAINING SECTION =====
+	.training {
+		&__content {
+			padding-bottom: 280px;
+		}
+	}
+
 	// ===== ADDRESS SECTION =====
 	.address {
+		padding-top: 73px;
+
 		&__content {
 			padding: $spacing-none-mobile $spacing-none-mobile;
 			gap: $spacing-xl-mobile;
