--- a/style/scss/sections/_payments.scss
+++ b/style/scss/sections/_payments.scss
@@ -5,9 +5,13 @@
 
 .payments {
 	background-color: $background;
+	background-image: url('../../../image/payments/Subtract.png');
+	background-size: 100% auto;
+	background-position: bottom;
+	background-repeat: no-repeat;
 
 	&__container {
-		padding: $spacing-none-desktop $spacing-xxxl-desktop;
+		padding: $spacing-none-desktop $spacing-xxxl-desktop 246px;
 		display: flex;
 		flex-direction: column;
 		gap: $spacing-xl-desktop;
