--- a/style/scss/sections/_training.scss
+++ b/style/scss/sections/_training.scss
@@ -2,6 +2,10 @@
 
 .training {
 	background-color: $text-default;
+	background-image: url('../../../image/training/bottom.webp');
+	background-size: 100% auto;
+	background-position: bottom;
+	background-repeat: no-repeat;
 	color: $text-inverse;
 	position: relative;
 	overflow: hidden;
@@ -58,7 +62,7 @@
 	}
 
 	&__content {
-		padding: 0 $spacing-xxxl-desktop;
+		padding: 0 $spacing-xxxl-desktop 950px;
 	}
 
 	&__content-heading h6 {
